# ansible-nginx

./: .gitignore  README.md  ansible.cfg  pyproject.toml
nginx-config/: deploy-mirror-proxy.yml  deploy-proxy.yml  provision.yml  requirements.yml
nginx-config/inventory/: nginx_servers.yml
nginx-config/inventory/group_vars/: all.yml  nginx_servers.yml
nginx-config/templates/nginx/: least_conn.j2  round_robin.j2
