[tool.poetry]
name = "ansible-nginx"
version = "0.1.0"
description = "OS Provisioning"
authors = ["Myroslav"]
license = "BSD 3-Clause"
readme = "README.md"
repository = "https://github.com/mirik12/ansible-nginx"
keywords = ["ansible", "provisioning", "os"]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.14"
ansible = "*"
cryptography = "^41.0.3"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
yamllint = "^1.32.0"
ansible-lint = { version = "^6.22.1", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
